# openpose-scanner

./: CMakeLists.txt  README.md  openpose.proto  openpose_op.cpp  scan.py
